--- a/NST.ipynb
+++ b/NST.ipynb
@@ -309,6 +309,150 @@
    "source": [
     "## Define and create our loss functions (content and style distances)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# content loss\n",
+    "\n",
+    "def get_content_loss(base_content, target):\n",
+    "    return tf.reduce_mean(tf.square(base_content-target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Computing style loss \n",
+    "\n",
+    "def gram_matrix(input_tensor):\n",
+    "    # we make image channels first \n",
+    "    channels = int(input_tensor.shape[-1])\n",
+    "    a = tf.reshape(input_tensor, [-1,channels])\n",
+    "    n = tf.shape(a)[0]\n",
+    "    gram = tf.matmul(a,a, transpose_a=True)\n",
+    "    return gram/ tf.casta(n, tf.float32)\n",
+    "\n",
+    "def get_style_loss(base_style, gram_target):\n",
+    "    \"\"\" Expect two images of dimensions h,w, c\"\"\"\n",
+    "    # height, width, num filters of each layer \n",
+    "    # we scale the loss at a given layer by the size of the feature map and the number of filters\n",
+    "    height, width, channels = base_style.get_shape().as_list()\n",
+    "    gram_style = gram_matrix(base_style)\n",
+    "    \n",
+    "    return tf.reduce_mean(tf.square(gram_style-gram_target))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applying Style transfer to our images "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_feature_representations(model, content_path, style_path):\n",
+    "    \"\"\"\n",
+    "    Helper function to compute our content and style feature representations \n",
+    "    \n",
+    "    This function will somply load and preprocess both the content and style images\n",
+    "    from their path. Then it will feed them through the network to obtain the outputs \n",
+    "    of the intermediate layers \n",
+    "    Arguments:\n",
+    "        model: The model that we are using \n",
+    "        content_path: the path to the content image \n",
+    "        style_path: the path to the style image \n",
+    "    \n",
+    "    Returns:\n",
+    "        returns the style features and the content features \n",
+    "    \"\"\"\n",
+    "    # Load our images in \n",
+    "    content_image = load_and_preprocess_img(content_path)\n",
+    "    style_image = load_and_preprocess_img(style_path)\n",
+    "    \n",
+    "    # batch compute content and style features \n",
+    "    style_outputs = model(style_image)\n",
+    "    content_outputs = model(content_image)\n",
+    "    \n",
+    "    # Get the style and content feature representations from our model \n",
+    "    style_features = [style_layer[0] for style_layer in style_outputs[:num_style_layers]]\n",
+    "    content_features = [content_layer[0] for content_layer in content_outputs[num_style_layers:]]\n",
+    "    \n",
+    "    return style_features, content_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_loss(model, loss_weights, init_image, gram_style_features, content_features):\n",
+    "    \"\"\"\n",
+    "    This function would compute the loss total loss\n",
+    "    \n",
+    "    Arguments:\n",
+    "        model: The model that will give us access to intermediate layers\n",
+    "        loss_weights: The weights of each contribution of each loss function.\n",
+    "        (style weight, content weight and total variation weight)\n",
+    "        init_image: Our initial base image. This image is what we are updating with \n",
+    "          our optimization process. We apply the gradients wrt the loss we are \n",
+    "          calculating to this image.\n",
+    "        gram_style_features: Precomputed gram matrices corresponding to the defined style\n",
+    "            layers of interest\n",
+    "        content_features: Precomputed outputs from defined content layers of interest\n",
+    "        \n",
+    "    Returns:\n",
+    "        returns the total loss, style loss, content loss and total variational loss\n",
+    "    \"\"\"\n",
+    "    style_weight, content_weight = loss_weights\n",
+    "    \n",
+    "    # Feed our init image throught our model. This will give us the content and \n",
+    "    # style representations at our desired layers. Since we're using eager \n",
+    "    # our model is callable just like any other function \n",
+    "    model_outputs = model(init_image)\n",
+    "    \n",
+    "    style_output_features = model_outputs[:num_style_layers]\n",
+    "    content_output_features = model_outputs[num_style_layers:]\n",
+    "    \n",
+    "    style_score= 0\n",
+    "    content_score = 0\n",
+    "    \n",
+    "    # Accumulate style losses from all layers \n",
+    "    # Here, we equally weight each contribution of each loss layer\n",
+    "    weight_per_style_layer = 1.0 / float(num_style_layers)\n",
+    "    for target_style, comb_style in zip(gram_style_features, style_output_features):\n",
+    "        style_score += weight_per_style_layer * get_style_loss(comb_style[0], target_style)\n",
+    "    \n",
+    "    # Accumulate content losses from all layers \n",
+    "    weight_per_content_layer = 1.0 / float(num_content_layers)\n",
+    "    for target_content, comb_content in zip(content_features, content_output_features):\n",
+    "        content_score += weight_per_content_layer* get_content_loss(comb_content[0], target_content)\n",
+    "    style_score *= style_weight\n",
+    "    content_score *= content_weight\n",
+    "    \n",
+    "    # Get total loss\n",
+    "    loss = style_score+content_score\n",
+    "    return loss, style_score, content_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
